test_programs/compile_failure/orphaned_trait_impl/src/main.nr
impl crate1::MyTrait for crate2::MyStruct {
}

fn main(x: Field, y: pub Field) {
    assert(x != y);
}
